[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/explosion.gd" type="Script" id=1]

[node name="explosion" type="Node2D"]

script/script = ExtResource( 1 )

[node name="effect" type="Particles2D" parent="."]

z/relative = false
config/amount = 50
config/lifetime = 2.0
config/time_scale = 7.0
config/process_mode = 1
config/explosiveness = 0.5
params/direction = 0.0
params/spread = 360.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="effect_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = true

[node name="delete_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="effect_timer" to="." method="_on_effect_timer_timeout"]

[connection signal="timeout" from="delete_timer" to="." method="_on_delete_timer_timeout"]


